--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-    "torch>=2.0.0",
-]
+requires = ["setuptools>=42", "wheel", "torch>=2.0.0", "numpy"]
 build-backend = "setuptools.build_meta"
