--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,14 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "*.ts": "typescript",
+    "*.tsx": "typescriptreact",
+    "*.json": "jsonc",
+    "*.cpp": "cpp",
+    "random": "cpp",
+    "queue": "cpp",
+    "stack": "cpp"
+  }
 }
